# MLforTerrainGeneration

./: LICENSE.txt  MNIST.ipynb  ProGAN.ipynb  README.md  pyproject.toml  ruff.toml
data/processed/: ProGAN_img_37_patchmetrics.csv  ProGAN_img_65_patchmetrics.csv  cairngorms_patch_metrics.csv  cairngorms_zoom_patch_metrics.csv  patch_metrics.csv
examples/: NLMpy_figures.py  ex1_nlm_basic.py  ex2_etherington2014.py  ex3_pylandstats.py  test landscapes2.py  test landscapes3.py  test.py  test.py.bak
src/mlforterraingeneration/Landscape_Metrics/: NLMpy_metric_examples.py  cairgorms_metrics.py  cairgorms_metrics_classified.py  cairgorms_metrics_suggestions.py  cairgormsrasternew.tif  cairngorms_metrics.py  tif_setnodata_0.py
src/mlforterraingeneration/Machine_Learning/: MNIST.ipynb  ProGAN_metrics.py  ProGAN_satellite_images.ipynb
src/mlforterraingeneration/Perlin_Noise/: perlin_generation.py
